# IProtocol

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  WSLGuide.md
include/: ComInterface.h  ProtocolInterface.h  UdpInterface.h
src/: ComInterface.cpp  UdpInterface.cpp  main.cpp
